tie function problem fixed css buttons text alignment fixed README comments

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ p{
     width: 50px;
     height: 40px;
     font-size: 24px;
+    text-align: center;
 }
 footer{
     background-color: #3d3d5c;
